@@ -29,6 +29,12 @@ set old_ldflags $LDFLAGS
 if { [istarget spu*-*-*] } {
     set LDFLAGS "$LDFLAGS --local-store 0:0"
 }
+if { [istarget alpha*-*-* ] } {
+    # The compress1 test is written expecting 32-bit addresses; force the
+    # executable down into the low address space to match.
+    # ??? How can we adjust just the one testcase?
+    set LDFLAGS "$LDFLAGS -Ttext-segment 0x1000000"
+}
 
 if { [is_remote host] } then {
     remote_download host merge.ld
